test/compile_errors/err_unreachable_after_exit.w
//! expect-error: unreachable code

use std.process

fn main:
    exit_code(0)
    print("never")
